# ChangeLog for dev-ruby/paper_trail
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*paper_trail-3.0.3 (11 Jul 2014)

  11 Jul 2014; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.3.ebuild:
  Version bump.

*paper_trail-3.0.2 (06 Jun 2014)

  06 Jun 2014; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.2.ebuild:
  Version bump.

*paper_trail-3.0.1 (04 Apr 2014)

  04 Apr 2014; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.1.ebuild:
  Version bump.

  24 Feb 2014; Hans de Graaff <graaff@gentoo.org> paper_trail-3.0.0.ebuild:
  Use separate slot for paper_trail 3.x to allow parallel install.

*paper_trail-3.0.0 (21 Feb 2014)

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.0.ebuild:
  Version bump.

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> -paper_trail-1.6.5.ebuild,
  -paper_trail-2.6.0.ebuild:
  Cleanup.

  21 Feb 2014; Hans de Graaff <graaff@gentoo.org> -paper_trail-2.6.0.ebuild:
  Cleanup.

  24 Nov 2012; Hans de Graaff <graaff@gentoo.org> paper_trail-2.6.0.ebuild,
  paper_trail-2.6.3.ebuild:
  Update sqlite3 package name.

*paper_trail-2.6.3 (17 May 2012)

  17 May 2012; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.6.3.ebuild:
  Version bump.

  13 Apr 2012; Hans de Graaff <graaff@gentoo.org> -paper_trail-2.2.9.ebuild,
  -paper_trail-2.4.0.ebuild, -paper_trail-2.5.0.ebuild:
  Remove old versions.

*paper_trail-2.6.0 (09 Mar 2012)

  09 Mar 2012; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.6.0.ebuild:
  Version bump.

  01 Dec 2011; Hans de Graaff <graaff@gentoo.org> paper_trail-2.5.0.ebuild:
  Add x86 keyword.

*paper_trail-2.5.0 (25 Nov 2011)

  25 Nov 2011; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.5.0.ebuild:
  Version bump.

*paper_trail-2.4.0 (12 Oct 2011)

  12 Oct 2011; Hans de Graaff <graaff@gentoo.org> +paper_trail-2.4.0.ebuild:
  Version bump.

*paper_trail-2.2.9 (17 Aug 2011)
*paper_trail-1.6.5 (17 Aug 2011)
