@@ -1,5 +1,3 @@
 DIST paper_trail-2.6.3.gem 99328 SHA256 078425d675817b10313fa738d04792eda1560945184b251f3230adc287ff754d SHA512 2f5a552d83b37b128b2faf4146d2a97cbd1f9d1a3b419aa60e517cc3caa4c5af182ea6dbfae93b6fd9536a2222c78fc53923d9171e340796d05b22254d3c90d0 WHIRLPOOL 8944eae9b7f238cbe41dc82b96cc70d2b34c8261bd464afb1e8944c27089bdd34dd7e8d35f66e598cb0d3e0aba38fb8b005e2205a66b7d96d99c950afc9d12d7
-DIST paper_trail-3.0.0.gem 119808 SHA256 454c1bc664237bc2b63f3e295aa2a847a09c3af93d95caf400fc81a87d6c53ea SHA512 cb70632bb09d277ebd68eadfc6c0f4f7eb8bb0f3325fe47c3c9dca639a4e6510673c30d2cb08dbfb688fd03bd41606c6463b8e3b695690645a62291752f1b64b WHIRLPOOL f69157e72a41fff5c8802d2beccd1f4540c2e81ada6c43a27122d1057ae507cba623d2147fd856f1ead4cd546b157b457635139d81ed0696d8ab2d6c5a6fcc90
-DIST paper_trail-3.0.1.gem 122880 SHA256 5ef4a5737a799356eb4a47c1f67d02c57f7ffc15f546df9d501459c4b8d8b9dc SHA512 68870ad4ceb2e6d738b13b9757bfc21675914b07550354907bf84c2848e3505935c1fe699cb1cba802531bfe9efb86acce786e8d489e29cd60c3ba9c941d749d WHIRLPOOL ffd54bf92ae7fdcc18d15ee7d8c24f2574dce41bec61f183ba2f55abae5a52b19b1f22f1cb7c3781d250a27c26897fa53f43ecd347496d91583bf817befa2588
 DIST paper_trail-3.0.2.gem 125440 SHA256 c349ed6cc813097b8fc7c08bd19efa8325f31203f911184040e309aa42b35ecd SHA512 578c34f66c0448e0f7f8f3d32f804dfad4fe338f673de315931bde27af07dbf4ee031821dc5b576fc96c2a06d9211412f406f36663c730fba31236a1e36f807e WHIRLPOOL d9325c8477c451ed2a01ec5847a4afdfe5925e31d08498f7c15e1ad1cf91364e0dffba473a38d7c754461d938c83a28f19fa1611fe601e6af49d71d9aa71f24d
 DIST paper_trail-3.0.3.gem 128000 SHA256 c01910aa418cd62e5f6d498861d7ee18a07eb37f1e6dd5b342ae0c21759a0d02 SHA512 824ec30e186929ceac7ebbee4b328d2d550ea806171b197c617c7e11a9aa7bfdcb81df81b026fcf4defc9accabf8b107f6da025ca3f10b5b8c032255c484be60 WHIRLPOOL 24036feae6b4afc1d8c080f647f00911e9c79f96308a1322438f766eda623a8ebe94eccb8b59c965b951da92522a064ee7248404cbf6cd755d44aef5089a2f1b
