@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  20 Oct 2014; Hans de Graaff <graaff@gentoo.org> -paper_trail-3.0.0.ebuild,
+  -paper_trail-3.0.1.ebuild:
+  Cleanup.
+
 *paper_trail-3.0.3 (11 Jul 2014)
 
   11 Jul 2014; Hans de Graaff <graaff@gentoo.org> +paper_trail-3.0.3.ebuild:
